# POSTE_INTELIGENTE_V8.1

./: CMakeLists.txt  huge_app.csv  lv_conf.h  platformio.ini  sdkconfig.esp32dev
Documentação/: ANALISE_ENERGETICA.txt  CENARIOS_PROTOCOLO_T_Tc.txt  LISTA_CENARIOS_T_Tc.txt  PARTE2_PLANO_IMPLEMENTACAO.txt  POSTE INTELIGENTE.txt  README.txt  RELATORIO_FINAL_POSTE_INTELIGENTE_V8.txt  Relatorio tecnico v8 · TXT  esquemas.docx  ~$quemas.docx
components/comm_manager/: CMakeLists.txt  comm_manager.c  comm_manager.h
components/config/: CMakeLists.txt  hw_config.h  post_config.c  post_config.h  system_config.h
components/dali_manager/: CMakeLists.txt  dali_manager.c  dali_manager.h
components/display_driver/: CMakeLists.txt  st7789.c  st7789.h
components/display_manager/: CMakeLists.txt  display_manager.c  display_manager.h  display_manager_task.c
components/radar_manager/: CMakeLists.txt  radar_manager.c  radar_manager.h  radar_manager_task.c
components/state_machine/: CMakeLists.txt  README.txt  fsm_core.c  fsm_core.h  fsm_events.c  fsm_events.h  fsm_network.c  fsm_network.h  fsm_sim.c  fsm_sim.h  fsm_task.c  fsm_timer.c  fsm_timer.h  state_machine.c  state_machine.h  state_machine_task.c
components/system_monitor/: CMakeLists.txt  system_monitor.c  system_monitor.h
components/tracking_manager/: CMakeLists.txt  tracking_manager.c  tracking_manager.h
components/udp_manager/: CMakeLists.txt  udp_manager.c  udp_manager.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  main.c
