idf_component_register(
    SRCS
        "fsm_core.c"
        "fsm_events.c"
        "fsm_network.c"
        "fsm_timer.c"
        "fsm_task.c"
    INCLUDE_DIRS "."
    REQUIRES
        dali_manager
        comm_manager
        radar_manager
        display_manager
        tracking_manager
        system_monitor
        config
        freertos
        esp_timer
        esp_system
        log
)
